--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,7 +59,7 @@ header {
 .hr4 {
     padding-top: 1.5px ;
     background-color: red;
-    margin: 0rem !important;
+    margin-top: 0rem !important;
   }
 
 .tarjeta{
